# PointerForce

./: .gitignore  Makefile  PointerForce  README.md  pointerforce.service  run_backend  run_webui
config/: pointerforce.json
frontend/: CMakeLists.txt  main.cpp  make.sh
frontend/services/: ConfigStore.cc  ConfigStore.h  ControlClient.cc  ControlClient.h
frontend/webui/: app.js  index.html  style.css
include/: common.hpp  config.hpp  control.hpp  daemon.hpp  device.hpp  devicemanager.hpp  event.hpp  eventqueue.hpp  executor.hpp  mapper.hpp  multiplexer.hpp
scripts/: reload.sh
service/: pointerforce.service
src/: config.cpp  control.cpp  daemon.cpp  device.cpp  devicemanager.cpp  event.cpp  eventqueue.cpp  executor.cpp  main.cpp  mapper.cpp  multiplexer.cpp  pfctl.cpp
